syntax = "proto3";
package logboy;

option go_package = "server/protogen";

import "google/protobuf/timestamp.proto";

message BuildDetails {
  string nodeVersion = 1;
  string appVersion = 2;
}

message Log {
  string serviceName = 1;
  BuildDetails buildDetails = 2;
  string level = 3;
  string message = 4;
  string stack = 5;
  string requestId = 6;
  string requestUrl = 7;
  string requestMethod = 8;
  string userAgent = 9;
  string remoteIp = 10;
  string responseStatus = 11;
  string responseTime = 12;
  google.protobuf.Timestamp timestamp = 13;
}
